--- a/Assets/Code/UserControl/Presenter/Presenter.asmdef
+++ b/Assets/Code/UserControl/Presenter/Presenter.asmdef
@@ -5,7 +5,9 @@
         "GUID:caf0c644b21cb3e4fb509b132dce13b8",
         "GUID:76c4f2de7ace37845858ea405eebc9c3",
         "GUID:fa62d47700a4b6b4488f238d1770acc2",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:82cadb7095a051449a845008f3422f9e",
+        "GUID:fbb04eea94c6b7b4aaff0e7d5a9e39d8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
